--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
 PORT=5000
-MONGO_URI=mongodb+srv://zahracom729:kandji02@blogsphere.p9fhnqo.mongodb.net/BlogSphere?retryWrites=true&w=majority&appName=BlogSphere
+MONGO_URI=mongodb+srv://zahracom729:TjCunDeOoMPAPzlY@cluster0.prweehv.mongodb.net/
 JWT_SECRET=supersecret123
 
